Correct alignment arrow-text.

--- a/src/pages/Beer/beer.scss
+++ b/src/pages/Beer/beer.scss
@@ -17,7 +17,7 @@
 
   > img {
     height: 22px;
-    vertical-align: text-top;
+    vertical-align: sub;
     margin-right: 15px;
   }
 }
